# dvsparse

./: .gitignore  CMakeLists.txt  bench.py  bench_regalloc.py  dense_spmv.csv  mkl_spmv.csv  naive_spmv.csv  requirements.txt  run_suitesparse.py  tensor_gen.py  test.py  train_model.py  utils.py
include/: mtx_to_csr.h
models/: density_threshold_spmv.pkl
results/: dense_spmv.csv  naive_spmv.csv  suitesparse_output.csv
src/: codegen_many_dense.py  dense_spmv.cpp  mkl_coo_spmv.cpp  mkl_spmv.cpp  naive_spmv.cpp
